--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Basic
-title: Vno Jekyll
-subtitle: A blog-orientation theme for Jekyll
-welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
-description: Vno Jekyll is a port of my Ghost theme vno.
+title: Zhaopeng Blog
+subtitle: A blog for strong
+welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Welcome to My World</a>
+description: I work on software project in China . Maybe I can work on the world if have chance.
 creator: <a href="http://onev.cat">@onevcat</a>
 
-url: "http://vno.onevcat.com"
+url: "http://www.baiducom"
 
 permalink: /:year/:month/:title/
 
